--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.2.6 (2014-06-13)
+------------------
+
+* Following ``gs.content.form`` to ``gs.content.form.base``
+
+
 2.2.5 (2014-06-02)
 ------------------
 
