--- a/gs/group/start/locales/fr/LC_MESSAGES/gs.group.start.po
+++ b/gs/group/start/locales/fr/LC_MESSAGES/gs.group.start.po
@@ -1,4 +1,4 @@
-#
+# 
 # Translators:
 # Michael JasonSmith <mpj17@onlinegroups.net>, 2015
 # Razique Mahroua <razique.mahroua@gmail.com>, 2015
@@ -6,23 +6,22 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gs.group.start\n"
 "POT-Creation-Date: 2015-09-21 23:19+0000\n"
-"PO-Revision-Date: 2015-03-14 18:12+0000\n"
-"Last-Translator: Razique Mahroua <razique.mahroua@gmail.com>\n"
+"PO-Revision-Date: 2015-09-21 16:28-0700\n"
+"Last-Translator: Michael JasonSmith <mpj17@onlinegroups.net>\n"
 "Language-Team: French (http://www.transifex.com/groupserver/gs-group-start/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Language-Code: en\n"
-"Language-Name: English\n"
-"Preferred-Encodings: utf-8 latin1\n"
 "Domain: DOMAIN\n"
 "Language: fr\n"
+"Language-Code: en\n"
+"Language-Name: English\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Preferred-Encodings: utf-8 latin1\n"
 
+#. Default: "The identifier for your group. It is used to create the URL and
 #. the email address for the group. You can only change it now."
-#. Default: "The identifier for your group. It is used to create the URL and the email address for the group. You can only change it now."
 #: ./interfaces.py:97
-#, fuzzy
 msgid "group-id-help"
 msgstr "L'identifiant pour votre groupe. Il est utilisé pour créer l'adresse et l'adresse e-mail pour ce groupe. Attention, il ne vous sera pas pas possible de le modifier plus tard."
 
@@ -31,7 +30,9 @@ msgstr "L'identifiant pour votre groupe. Il est utilisé pour créer l'adresse e
 msgid "group-id-label"
 msgstr "ID du groupe"
 
-#. Default: "<strong class=\"label alert-label\">Group ID In Use:</strong> The Group ID <code>above</code> is already being used. Please pick another group ID."
+#. Default: "<strong class=\"label alert-label\">Group ID In Use:</strong> The
+#. Group ID <code>above</code> is already being used. Please pick another
+#. group ID."
 #: ./browser/templates/startgroup.pt:38
 msgid "group-id-used"
 msgstr ""
@@ -46,7 +47,8 @@ msgstr "Le nom de votre premier groupe. Vous pourrez le modifier plus tard."
 msgid "group-name-label"
 msgstr "Nom du groupe"
 
-#. Default: "Members will post to the group by using the web or by sending an <strong>email</strong> to ${groupEmail}."
+#. Default: "Members will post to the group by using the web or by sending an
+#. <strong>email</strong> to ${groupEmail}."
 #: ./browser/templates/startgroup.pt:60
 msgid "group-preview-email"
 msgstr ""
@@ -56,7 +58,8 @@ msgstr ""
 msgid "group-preview-name"
 msgstr ""
 
-#. Default: "The <strong>web address</strong> for the group will be ${groupUrl}."
+#. Default: "The <strong>web address</strong> for the group will be
+#. ${groupUrl}."
 #: ./browser/templates/startgroup.pt:65
 msgid "group-preview-web"
 msgstr ""
@@ -71,11 +74,10 @@ msgstr "Contrôle la visibilité du groupe, ainsi que la visibilité de ses mess
 msgid "group-privacy-label"
 msgstr "Confidentialité du groupe"
 
+#. Default: "The text \"${id}\" is not a valid group identifier. A group ID
 #. can only contain letters, numbers, dashes and underscores. Please pick
 #. another ID."
-#. Default: "The text \"${id}\" is not a valid group identifier. A group ID can only contain letters, numbers, dashes and underscores. Please pick another ID."
 #: ./interfaces.py:35
-#, fuzzy
 msgid "invalid-id-msg"
 msgstr "The texte \"${id}\" n'est pas un identifiant de groupe valide. Un identifiant de groupe ne peut contenir que des lettres, des chiffres, des tirets, ainsi que des underscores. Veuillez choisir un autre identifiant."
 
@@ -84,7 +86,11 @@ msgstr "The texte \"${id}\" n'est pas un identifiant de groupe valide. Un identi
 msgid "multiple-errors"
 msgstr "Des erreurs sont présentes :"
 
-#. Default: "Secret groups are <strong>hard</strong> to use: you, and the other group members, have to be logged in to even see that the group <em>exists.</em> <strong>Private</strong> groups also hide the messages posted to the group, but the members can see that they have to log in to view them."
+#. Default: "Secret groups are <strong>hard</strong> to use: you, and the
+#. other group members, have to be logged in to even see that the group
+#. <em>exists.</em> <strong>Private</strong> groups also hide the messages
+#. posted to the group, but the members can see that they have to log in to
+#. view them."
 #: ./browser/templates/startgroup.pt:74
 msgid "secret-group-warning"
 msgstr ""
@@ -119,10 +125,8 @@ msgstr "Démarrer un groupe"
 msgid "start-status"
 msgstr "Le group ${groupName} a été démarré"
 
+#. Default: "The identifier \"${id}\" is already being used. Please pick
 #. another ID."
-#. Default: "The identifier \"${id}\" is already being used. Please pick another ID."
 #: ./interfaces.py:63
-#, fuzzy
 msgid "used-id-msg"
 msgstr "L'identifiant \"${id}\" est déjà utilisé. Veuillez en choisir un autre."
-
