--- a/gs/group/start/locales/en/LC_MESSAGES/gs.group.start.po
+++ b/gs/group/start/locales/en/LC_MESSAGES/gs.group.start.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2015-09-21 23:19+0000\n"
-"PO-Revision-Date: 2015-09-21 16:22-0700\n"
+"PO-Revision-Date: 2016-01-11 08:20-0800\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr "Group ID"
 #. Default: "<strong class=\"label alert-label\">Group ID In Use:</strong> The Group ID <code>above</code> is already being used. Please pick another group ID."
 #: ./browser/templates/startgroup.pt:38
 msgid "group-id-used"
-msgstr ""
+msgstr "<strong class=\"label alert-label\">Group ID In Use:</strong> The Group ID <code>above</code> is already being used. Please pick another group ID."
 
 #. Default: "The name of your first group. You can change it later"
 #: ./interfaces.py:90
@@ -47,7 +47,7 @@ msgstr "Members will post to the group by using the web or by sending an <b>emai
 #. Default: "The new group will have the <strong>name</strong> ${groupName}."
 #: ./browser/templates/startgroup.pt:54
 msgid "group-preview-name"
-msgstr ""
+msgstr "The new group will have the <strong>name</strong> ${groupName}.\n"
 
 #. Default: "The <strong>web address</strong> for the group will be ${groupUrl}."
 #: ./browser/templates/startgroup.pt:65
