--- a/gs/group/start/locales/en/LC_MESSAGES/gs.group.start.po
+++ b/gs/group/start/locales/en/LC_MESSAGES/gs.group.start.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2015-09-21 23:19+0000\n"
-"PO-Revision-Date: 2016-01-11 08:20-0800\n"
+"PO-Revision-Date: 2016-01-11 08:23-0800\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr "Group ID"
 #. Default: "<strong class=\"label alert-label\">Group ID In Use:</strong> The Group ID <code>above</code> is already being used. Please pick another group ID."
 #: ./browser/templates/startgroup.pt:38
 msgid "group-id-used"
-msgstr "<strong class=\"label alert-label\">Group ID In Use:</strong> The Group ID <code>above</code> is already being used. Please pick another group ID."
+msgstr "<b>Group ID In Use:</b> The Group ID <code>above</code> is already being used. Please pick another group ID."
 
 #. Default: "The name of your first group. You can change it later"
 #: ./interfaces.py:90
