--- a/gs/group/start/locales/en/LC_MESSAGES/gs.group.start.po
+++ b/gs/group/start/locales/en/LC_MESSAGES/gs.group.start.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2015-09-21 23:19+0000\n"
-"PO-Revision-Date: 2016-01-11 08:23-0800\n"
+"PO-Revision-Date: 2016-01-11 08:26-0800\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -47,7 +47,7 @@ msgstr "Members will post to the group by using the web or by sending an <b>emai
 #. Default: "The new group will have the <strong>name</strong> ${groupName}."
 #: ./browser/templates/startgroup.pt:54
 msgid "group-preview-name"
-msgstr "The new group will have the <strong>name</strong> ${groupName}.\n"
+msgstr "The new group will have the <b>name</b> ${groupName}."
 
 #. Default: "The <strong>web address</strong> for the group will be ${groupUrl}."
 #: ./browser/templates/startgroup.pt:65
