--- a/gs/group/start/locales/de/LC_MESSAGES/gs.group.start.po
+++ b/gs/group/start/locales/de/LC_MESSAGES/gs.group.start.po
@@ -2,11 +2,12 @@
 # Translators:
 # Alice Rose <heldinz@posteo.de>, 2015
 # Clara Adele von Randow <cvrandow@freenet.de>, 2015
+# Stephan G. Blendinger <stephanblendinger@me.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: gs.group.start\n"
 "POT-Creation-Date: 2015-09-21 23:19+0000\n"
-"PO-Revision-Date: 2015-09-21 16:29-0700\n"
+"PO-Revision-Date: 2016-01-11 16:26+0000\n"
 "Last-Translator: Michael JasonSmith <mpj17@onlinegroups.net>\n"
 "Language-Team: German (http://www.transifex.com/groupserver/gs-group-start/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -51,7 +52,7 @@ msgstr "Gruppenname"
 #. <strong>email</strong> to ${groupEmail}."
 #: ./browser/templates/startgroup.pt:60
 msgid "group-preview-email"
-msgstr ""
+msgstr "Mitglieder können Beiträge über das Web erstellen oder per <b>E-Mail</b> an ${groupEmail} senden."
 
 #. Default: "The new group will have the <strong>name</strong> ${groupName}."
 #: ./browser/templates/startgroup.pt:54
@@ -79,7 +80,7 @@ msgstr "Privatsphäre der Gruppe"
 #. another ID."
 #: ./interfaces.py:35
 msgid "invalid-id-msg"
-msgstr "Der Text \"${id}\" ist keine gültige Gruppenkennzeichnung. Eine Gruppenkennzeichnung kann ausschließlich Buchstaben, Zahlen, Gedankenstriche und Unterstriche beinhalten. Bitte wählen Sie eine andere Kennzeichnung."
+msgstr "Der Text \"${id}\" ist keine gültige Gruppenkennzeichnung. Eine Gruppenkennzeichnung kann ausschließlich Buchstaben, Zahlen, Bindestriche und Unterstriche beinhalten. Bitte wählen Sie eine andere Kennzeichnung."
 
 #. Default: "There are errors:"
 #: ./startgroup.py:79
@@ -103,7 +104,7 @@ msgstr "Es ist ein Fehler aufgetreten:"
 #. Default: "${siteName} Homepage"
 #: ./browser/templates/startgroup.pt:25
 msgid "site-home"
-msgstr ""
+msgstr "${siteName} Startseite"
 
 #. Default: "<strong>Start</strong> a group."
 #: ./browser/templates/startlink.pt:4
@@ -129,4 +130,4 @@ msgstr "Die Gruppe ${groupName} wurde erstellt."
 #. another ID."
 #: ./interfaces.py:63
 msgid "used-id-msg"
-msgstr "<Die Kennzeichnung \"${id}\" ist schon in Benutzung. Bitte wählen Sie eine andere Kennzeichnung."
+msgstr ""
