--- a/gs/group/start/locales/fr/LC_MESSAGES/gs.group.start.po
+++ b/gs/group/start/locales/fr/LC_MESSAGES/gs.group.start.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gs.group.start\n"
 "POT-Creation-Date: 2015-09-21 23:19+0000\n"
-"PO-Revision-Date: 2015-09-21 16:28-0700\n"
+"PO-Revision-Date: 2016-01-11 08:32-0800\n"
 "Last-Translator: Michael JasonSmith <mpj17@onlinegroups.net>\n"
 "Language-Team: French (http://www.transifex.com/groupserver/gs-group-start/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -35,7 +35,7 @@ msgstr "ID du groupe"
 #. group ID."
 #: ./browser/templates/startgroup.pt:38
 msgid "group-id-used"
-msgstr ""
+msgstr "<b>L'identifiant</b> \"${id}\" est déjà utilisé. Veuillez en choisir un autre."
 
 #. Default: "The name of your first group. You can change it later"
 #: ./interfaces.py:90
@@ -103,7 +103,7 @@ msgstr "Une erreur est survenue"
 #. Default: "${siteName} Homepage"
 #: ./browser/templates/startgroup.pt:25
 msgid "site-home"
-msgstr ""
+msgstr "Page d'accueil du site ${siteName}"
 
 #. Default: "<strong>Start</strong> a group."
 #: ./browser/templates/startlink.pt:4
